fix(workspace-info): adjust dimensions and spacing for on-screen display elements

--- a/window/onscreen-display/style.scss
+++ b/window/onscreen-display/style.scss
@@ -11,9 +11,6 @@
 .uppercase { text-transform: uppercase; }
 
 .onscreen-display {
-//   background: linear-gradient(to bottom, #070B1F, #040714);
-//   border: 1.5px solid #0A102E;
-  image { -gtk-icon-shadow: 0px 0px 4px rgba(black, 0.5); }
     font-family: Rajdhani;
     text-transform: uppercase;
     color: #e0eaf8; font-weight: 600;
@@ -21,5 +18,5 @@
     font-size: 8px;
     .id { font-size: 35px; font-weight: bolder; font-family: Chakra Petch; }
     .decoration-text { font-size: 5px; color: #161a30; letter-spacing: 1.0px; }
-    .monitor { font-size: 7px; }
+    .monitor { font-size: 7px; color: #6E78A7; text-transform: uppercase; letter-spacing: 0.6px; font-weight: 700;}
 }
